tests/NormalTests/paczka1/small_fuzzy/60231556.err
Error in line 1: 9r2z7B A962 45,2
Error in line 9: S349 S349 95,2
Error in line 12: t46G S388 -1,2
Error in line 6: t46G S388 79,5
Error in line 11: S349 A962 74,9
